--- a/NoReturn/NoReturn.html
+++ b/NoReturn/NoReturn.html
@@ -33,7 +33,7 @@
         <div class="sheet-item sheet-lable"><label>Tragkraft</label></div>
         <div class="sheet-item sheet-labletexts"><input type="number" name="attr_tragkraft" value="floor((@{st}+@{stemmen}+@{stemmen_mod})*10)" disabled="true" /></div>
         <div class="sheet-item sheet-lable"><label>Ini</label></div>
-        <div class="sheet-item sheet-labletextd" style="width: 109px;"><input style="width: 80%;text-align: center;" type="text" name="attr_ini" value="floor(@{sk}+@{reaktion})" disabled="true" /><button style="width: 20px;" type="roll" name="roll_ini" value="/me beginnt mit einer Initiative von [[1d6! + ((@{sk} - 1) + @{reaktion} + @{reaktion_mod} - @{malusGesamt} + ?{Modifier?|0})d6 &{tracker}]]"></button></div>
+        <div class="sheet-item sheet-labletextd" style="width: 109px;"><input style="width: 80%;text-align: center;" type="text" name="attr_ini" value="floor(@{sk}+@{reaktion} + @{reaktion_mod})" disabled="true" /><button style="width: 20px;" type="roll" name="roll_ini" value="/me beginnt mit einer Initiative von [[1d6! + ((@{sk} - 1) + @{reaktion} + @{reaktion_mod} - @{malusGesamt} + ?{Modifier?|0})d6 &{tracker}]]"></button></div>
       </div>
       <div class="sheet-row">
         <div class="sheet-item sheet-lable"><label>Bekanntheit</label></div>
@@ -655,7 +655,7 @@
             <div class="sheet-item sheet-med"><input type="text" name="attr_psiart" /></div>
           </div>
           <div class="sheet-row sheet-one sheet-Makro_psi">
-            <textarea name="attr_psi_makro">/me benutzt @{psiname} mit dem Ergebniss ?{Min. Zielbereich|@{psiRangeMin}} > [[(@{psikraft} - @{malusGesamt} + ?{Modifier?|0})d6]] < ?{Max. Zielbereich|@{psiRangeMax}}</textarea>
+            <textarea name="attr_psi_makro">/me benutzt @{psiname} mit dem Ergebniss ?{Min. Zielbereich|@{psiRangeMin}} > [[1d6! + ((@{psikraft} - 1) - @{malusGesamt} + ?{Modifier?|0})d6]]< ?{Max. Zielbereich|@{psiRangeMax}}</textarea>
           </div>
           <div class="sheet-row">
             <div class="sheet-item sheet-tiny"><label>Kraft:</label></div>
@@ -779,10 +779,11 @@
             <div class="sheet-item sheet-puny"></div>
             <div class="sheet-item sheet-puny"><label>Art:</label></div>
             <div class="sheet-item sheet-med">
-              <select name="attr_meleeweaponclass" class="charaselect">
-								<option value="[[@{nahkampf}+@{nahkampf_mod})]]">Nahkampf</option>
-								<option value="[[@{waffenkampf}+@{waffenkampf_mod}]]">Waffenkampf</option>
-							</select>
+			<select name="attr_meleeweaponclass" class="charaselect">
+				<option value="[[@{nahkampf}+@{nahkampf_mod})]]">Nahkampf</option>
+				<option value="[[@{waffenkampf}+@{waffenkampf_mod}]]">Waffenkampf</option>
+				<option value="[[@{wurfwaffen}+@{wurfwaffen_mod}]]">Wurfwaffen</option>
+			</select>
             </div>
           </div>
           <div class="sheet-row">
@@ -792,7 +793,7 @@
           </button></div>
             <div class="sheet-item sheet-small"><input type="number" name="attr_meleeweapondamage" /></div>
             <div class="sheet-item sheet-puny">p</div>
-            <div class="sheet-item sheet-med"><label>Temp. Bonus:</label></div>
+            <div class="sheet-item sheet-med"><label>Temp. Atk Bonus:</label></div>
             <div class="sheet-item sheet-small"><input type="number" name="attr_meleeweapontemp" value="0" /></div>
           </div>
           <div class="sheet-row">
@@ -822,7 +823,6 @@
 								<option value="[[@{schiessen}+@{schiessen_mod}]]">Schießen</option>
 								<option value="[[@{schwereWaffen}+@{schwereWaffen_mod}]]">Schwere Waffen</option>
 								<option value="[[@{spruehwaffen}+@{spruehwaffen_mod}]]">Sprühwaffen</option>
-								<option value="[[@{wurfwaffen}+@{wurfwaffen_mod}]]">Wurfwaffen</option>
 							</select>
             </div>
           </div>
@@ -878,7 +878,7 @@
           <div class="sheet-row sheet-twice sheet-Makro_rw">
             <textarea name="attr_rangeattack_makro_ers">/me schießt mit @{rangedweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{rangedweaponclass} - @{malusGesamt} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
             <textarea name="attr_rangeattack_makro_b">/me schießt mit @{rangedweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{rangedweaponclass} - @{malusGesamt} + ?{Streufeuer|nein, 0|ja, 2} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
-            <textarea name="attr_rangeattack_makro_v">/me schießt mit @{rangedweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{rangedweaponclass} - @{malusGesamt} + ?{Sperrfeuer|nein, @{rangedweapondamageMore}|ja, 0} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
+            <textarea name="attr_rangeattack_makro_v">/me schießt mit @{rangedweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{rangedweaponclass} - @{malusGesamt} + ?{Sperrfeuer|nein, @{rangedweaponrd}|ja, 0} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
             <textarea name="attr_rangedamage_makro_ers">/me und macht [[@{rangedweapondamage} + @{rangedweapondamageMore} * (?{Schussanzahl?|1}-1) + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
             <textarea name="attr_rangedamage_makro_b">/me und macht [[@{rangedweapondamage} + @{rangedweapondamageMore} * (?{Burstanzahl?|1}-1) + ?{Konzentriertes Feuer|nein, 0|ja, 10} + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
             <textarea name="attr_rangedamage_makro_a">/me und macht [[@{rangedweapondamage_a} + 10 + @{rangedweapondamageMore} * 2 + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
