GURPS point summary bug fix
Fix bug with totalling spend/unspent fields.

--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -21,17 +21,7 @@
 	        <div class="content">
 	            <h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 	            <ul>
-					<li>Rolltemplate text. On critical failure for dodge, added additional notes. Suggested by Mike W.</li>
-            		<li>Rolltemplate text. On critical failure for parry, added additional notes. Suggested by Mike W.</li>
-            		<li>Rolltemplate text. On critical failure for block, added additional notes. Suggested by Mike W.</li>
-            		<li>Rolltemplate text. On critical success for any active defense, added additional notes. Suggested by Mike W.</li>
-            		<li>Bio\Misc. Tab. Added Training textarea below Background history & notes. Suggested by Mike W.</li>
-            		<li>General Tab. Added toggle to show/hide encumbrance table. Suggested by Mike W.</li>
-            		<li>General Tab: Revamped Point summary to show more details. Added more space for notes.</li>
-            		<li>Grimoire Tab: Added tool tips to headers. Additional information will be added later. Suggested by Mike W.</li>
-            		<li>General Tab: Added tooltips to Flying and Swimming sections. Moved movement feats below the encumbrance table.</li>
-            		<li>General Tab: Changed spacing in box for containing Hit Points and Energy Reserve.</li>
-            		<li>General Tab: Tweaked spacing to main stats section. Added Custom Pools heading and tooltip.</li>
+					<li>General Tab: Fix bug for totalling amounts in summary point table. Reported by Raymond G and Elaxter.</li>
             	</ul>
 	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -1177,7 +1167,7 @@
 						Spent
 					</div>
 					<div class="sheet-cell sheet-col1">
-						<input type="text" name="attr_point_summary" disabled="disabled" value="@{att_points} + @{trait_points} + @{skill_points} + @{misc_points}" />
+						<input type="text" name="attr_point_summary" disabled="disabled" value="@{att_points} + @{trait_points} + @{skill_points} + @{techniques_points} + @{spells_points} + @{misc_points}" />
 					</div>
 				</div> <!-- .sheet-row -->
 				<div class="sheet-row margin-bottom sheet-row-total sheet-hr">
@@ -1185,7 +1175,7 @@
 						Unspent
 					</div>
 					<div class="sheet-cell sheet-col1">
-					    <input type="text" name="attr_point_diff" value="@{total_points} - (@{att_points} + @{trait_points} + @{skill_points} + @{misc_points})" disabled="disabled" />
+					    <input type="text" name="attr_point_diff" value="@{total_points} - (@{att_points} + @{trait_points} + @{skill_points} + @{techniques_points} + @{spells_points} + @{misc_points})" disabled="disabled" />
 					</div>
 				</div> <!-- .sheet-row -->
 				<div class="sheet-row margin-bottom sheet-row-unspent sheet-hr">
@@ -3889,7 +3879,7 @@
 	<div>
 
 	<h3>Latest Changes: Updated 
-		<input type="text" style="font-size: 20px; font-weight: bold; border-style: none;" name="attr_latest_changes" value="07/23/2019" readonly="readonly"/>
+		<input type="text" style="font-size: 20px; font-weight: bold; border-style: none;" name="attr_latest_changes" value="08/06/2019" readonly="readonly"/>
 	</h3>
 		
 	<h3>Known Issues</h3>
@@ -3919,6 +3909,14 @@
 		<p>In your post, please specify if it is an Issue or Suggestion with as much detail information as possible. Screen shots help a lot! I am just learning to work with HTML and CSS so I may not be able to do everything requested. I make no promises on how fast I may be able to implement a Fix or a Suggestion - so please be patient. -Thanks, Mike W.</p>
 
 		<p>If there are others that are working on or wish to work on this sheet, lets coordinate using the Roll20 forum for now - perhaps later we can use GitHub.</p>
+	</ul>
+	
+	<h4>Version: 1.6.3</h4>
+	
+	<p>Pull Request: 8/6/2019</p>
+	
+	<ul>
+	    <li>General Tab: Fix bug for totalling amounts in summary point table. Reported by Raymond G and Elaxter.</li>
 	</ul>
 	
 	<h4>Version: 1.6.2</h4>
@@ -4837,7 +4835,7 @@ Skull Damage x4
 
 	var noop = function () {}; // do nothing.
 
-	var version = "1.6.2";
+	var version = "1.6.3";
 
 	var modCascade = true;
 	
