--- a/Terror Infinity - (FX)/Terror Infinity.html
+++ b/Terror Infinity - (FX)/Terror Infinity.html
@@ -613,7 +613,7 @@
                         <option value="體積">體積</option>
                         <option value="基礎防禦">基礎防禦</option>
                         <option value="意志檢定">意志檢定</option>
-                        <option value="意志豁免">意志豁免</option>
+                        <option value="潛藏">潛藏</option>
                         <option value="反射">反射</option>
                         <option value="強韌">強韌</option>
                         <option value="偵查">偵查</option>
@@ -2022,7 +2022,7 @@
                     </div>
                 </div>
                 <!-- 生命值,意志值,體積 -->
-                <!-- 基礎防禦,意志檢定,意志豁免 -->
+                <!-- 基礎防禦,意志檢定,潛藏 -->
                 <div class="topspace acvalues">
                     <input class="options-flag" name="attr_options-flag-l04" type="checkbox" title="打開/隱藏 選項">
                     <span>y</span>
@@ -2056,8 +2056,8 @@
                             <input type="number" name="attr_K1_temp" class="nospin boxed" value="0" /> </div>
                         <div class="blacklabel sqr flatfooted" style="width:70px">
                             <button class="myrol big" type="roll" name="roll_Size"
-                                value="@{whispertype} &{template:pc}{{ima_TI=@{ima_TI}}}{{name=意志豁免}}  {{charname=@{character_name}}} {{roll=[[(@{L1})d10>8!]]}}{{notes=@{L_notes}}}{{conditions=[[@{L1_1}+@{L1_2}+@{L1_3}]]}}">
-                                <span title="">意志豁免</span>
+                                value="@{whispertype} &{template:pc}{{ima_TI=@{ima_TI}}}{{name=潛藏}}  {{charname=@{character_name}}} {{roll=[[(@{L1})d10>8!]]}}{{notes=@{L_notes}}}{{conditions=[[@{L1_1}+@{L1_2}+@{L1_3}]]}}">
+                                <span title="">潛藏</span>
                             </button>
                         </div>
                         <div class="greybg boxed">
@@ -2166,12 +2166,12 @@
                             <span class="lab margindent" style="width: 1px;" title="">其他</span>
                         </div>
                         <div class="myrow">
-                            <span class="spacer">豁免 =</span>
+                            <span class="spacer">潛藏 =</span>
                             <span class="spacer"></span>
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_L2" class="nospin boxed" disabled
-                                    value="[[@{H1}]]+[[@{resolve_bonus_sum}]]" />
+                                    value="[[@{dexterity_sum}]]+[[@{skills_19_sum}]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -2221,12 +2221,12 @@
                         </div>
                         <div class="autoex">
                             <span name="attr_L_notes"></span>
-                            <textarea name="attr_L_notes" spellcheck="false" placeholder="意志豁免"
-                                title="@{L_notes}"></textarea>
+                            <textarea name="attr_L_notes" spellcheck="false" placeholder="潛藏 本質及級數:"
+                                title="@{L_notes}">本質及級數:</textarea>
                         </div>
                     </div>
                 </div>
-                <!-- 基礎防禦,意志檢定,意志豁免 -->
+                <!-- 基礎防禦,意志檢定,潛藏 -->
                 <!-- 反射,強韌,偵查 -->
                 <div class="topspace acvalues">
                     <input class="options-flag" name="attr_options-flag-l05" type="checkbox" title="打開/隱藏 選項">
@@ -2425,8 +2425,8 @@
                         </div>
                         <div class="autoex">
                             <span name="attr_O_notes"></span>
-                            <textarea name="attr_O_notes" spellcheck="false" placeholder="偵查"
-                                title="@{O_notes}"></textarea>
+                            <textarea name="attr_O_notes"  spellcheck="false" placeholder="偵查 本質及級數:"
+                                title="@{O_notes}">本質及級數:</textarea>
                         </div>
                     </div>
                 </div>
