--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -369,7 +369,7 @@
             <div class="dice_pool-grid">
                 <div class="dice_pool-box1 toggle-dice-only header"><h1 data-i18n="dice-pool-u">DICE POOL</h1></div>
                 <div class="grid-item">
-                    <span class="label" data-i18n="attribute-score">Attribute Score</span>
+                    <span class="label" data-i18n-title="base-attribute-dice" data-i18n="base">Base</span>
                     <input type="radio" name="attr_attribute" value="6" class="dice-selection attribute" /><span title="6"></span>
                     <input type="radio" name="attr_attribute" value="5" class="dice-selection attribute" /><span title="5"></span>
                     <input type="radio" name="attr_attribute" value="4" class="dice-selection attribute" /><span title="4"></span>
@@ -384,14 +384,14 @@
                     <input type="hidden" name="attr_attribute_die_two" value="1" />
                     <input type="hidden" name="attr_attribute_die_one" value="1" />
                     <hr class="horizontal-rule">
-                    <span class="label" data-i18n="artifact-bonus">Artifact Bonus</span>
+                    <span class="label" data-i18n-title="artifact-bonus" data-i18n="artifact">Artifact</span>
                     <input type="checkbox" name="attr_artifact_die_twelve" value="1" class="dice-selection legendary" title="add d12" /><span data-i18n-title="legendary" title="Legendary"></span>
                     <input type="checkbox" name="attr_artifact_die_ten" value="1" class="dice-selection epic" title="add d10" /><span data-i18n-title="epic"title="Epic"></span>
                     <input type="checkbox" name="attr_artifact_die_ocho" value="1" class="dice-selection mighty" title="add d8" /><span data-i18n-title="mighty" title="Mighty"></span>
                     <input type="checkbox" name="attr_artifact_die_eight" value="1" class="dice-selection mighty" title="add d8" /><span data-i18n-title="mighty" title="Mighty"></span>
                 </div>
                 <div class="grid-item">
-                    <span class="label" data-i18n="skill-level">Skill Level</span>
+                    <span class="label" data-i18n-title="skill-level" data-i18n="skill">Skill</span>
                     <input type="radio" name="attr_skill" value="7" class="dice-selection skill" /><span title="7"></span>
                     <input type="radio" name="attr_skill" value="6" class="dice-selection skill" /><span title="6"></span>
                     <input type="radio" name="attr_skill" value="5" class="dice-selection skill" /><span title="5"></span>
@@ -419,7 +419,7 @@
                     </div>
                 </div>
                 <div class="grid-item">
-                    <span class="label" data-i18n="gear-bonus">Gear Bonus</span>
+                    <span class="label" data-i18n-title="gear-bonus" data-i18n="gear">Gear</span>
                     <input type="radio" name="attr_gear" value="12" class="dice-selection gear" /><span title="12"></span>
                     <input type="radio" name="attr_gear" value="11" class="dice-selection gear" /><span title="11"></span>
                     <input type="radio" name="attr_gear" value="10" class="dice-selection gear" /><span title="10"></span>
@@ -462,7 +462,7 @@
                     <button class="dice-pool" type="roll" name="roll_a_push" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{pushes-the-roll}}} {{subtitle=@{current_preset}}} {{free-text}} {{footer}} {{attribute-die-one=[[ @{attribute_die_one}]] }} {{attribute-roll-one=[[1d6]] }} {{attribute-die-two=[[ @{attribute_die_two}]] }} {{attribute-roll-two=[[1d6]] }} {{attribute-die-three=[[ @{attribute_die_three}]] }} {{attribute-roll-three=[[1d6]] }} {{attribute-die-four=[[ @{attribute_die_four}]] }} {{attribute-roll-four=[[1d6]] }} {{attribute-die-five=[[ @{attribute_die_five}]] }} {{attribute-roll-five=[[1d6]] }} {{attribute-die-six=[[ @{attribute_die_six}]] }} {{attribute-roll-six=[[1d6]] }} {{skill-die-one=[[ @{skill_die_one}]] }} {{skill-roll-one=[[1d6]] }} {{skill-die-two=[[ @{skill_die_two}]] }} {{skill-roll-two=[[1d6]] }} {{skill-die-three=[[ @{skill_die_three}]] }} {{skill-roll-three=[[1d6]] }} {{skill-die-four=[[ @{skill_die_four}]] }} {{skill-roll-four=[[1d6]] }} {{skill-die-five=[[ @{skill_die_five}]] }} {{skill-roll-five=[[1d6]] }} {{skill-die-six=[[ @{skill_die_six}]] }} {{skill-roll-six=[[1d6]] }} {{skill-die-seven=[[ @{skill_die_seven}]] }} {{skill-roll-seven=[[1d6]] }} {{negative-die-one=[[ @{negative_die_one}]] }} {{negative-roll-one=[[1d6]] }} {{negative-die-two=[[ @{negative_die_two}]] }} {{negative-roll-two=[[1d6]] }} {{negative-die-three=[[ @{negative_die_three}]] }} {{negative-roll-three=[[1d6]] }} {{gear-die-one=[[ @{gear_die_one}]] }} {{gear-roll-one=[[1d6]] }} {{gear-die-two=[[ @{gear_die_two}]] }} {{gear-roll-two=[[1d6]] }} {{gear-die-three=[[ @{gear_die_three}]] }} {{gear-roll-three=[[1d6]] }} {{gear-die-four=[[ @{gear_die_four}]] }} {{gear-roll-four=[[1d6]] }} {{gear-die-five=[[ @{gear_die_five}]] }} {{gear-roll-five=[[1d6]] }} {{gear-die-six=[[ @{gear_die_six}]] }} {{gear-roll-six=[[1d6]] }} {{gear-die-seven=[[ @{gear_die_seven}]] }} {{gear-roll-seven=[[1d6]] }} {{gear-die-eight=[[ @{gear_die_eight}]] }} {{gear-roll-eight=[[1d6]] }} {{gear-die-nine=[[ @{gear_die_nine}]] }} {{gear-roll-nine=[[1d6]] }} {{gear-die-ten=[[ @{gear_die_ten}]] }} {{gear-roll-ten=[[1d6]] }} {{gear-die-eleven=[[ @{gear_die_eleven}]] }} {{gear-roll-eleven=[[1d6]] }} {{gear-die-twelve=[[ @{gear_die_twelve}]] }} {{gear-roll-twelve=[[1d6]] }} {{artifact-die-eight=[[ @{artifact_die_eight}]] }} {{artifact-roll-eight=[[1d8]] }} {{artifact-die-ocho=[[ @{artifact_die_ocho}]] }} {{artifact-roll-ocho=[[1d8]] }} {{artifact-die-ten=[[ @{artifact_die_ten}]] }} {{artifact-roll-ten=[[1d10]] }} {{artifact-die-twelve=[[ @{artifact_die_twelve}]] }} {{artifact-roll-twelve=[[1d12]] }} {{push-query=?{Did You Adjust the Dice Pool?|Yes ~ Of Course I Did.,The Pool of Dice was Adjusted.|No ~ I didn't ~ I need to Cancel this Roll.,The Pool of Dice was Not Adjusted.} }} @{include_with_roll}" data-i18n-title="push-dice" title="Push the Dice!"><span class="small-caps" data-i18n="push"> Push </span></button>
                 </div>
                 <div class="grid-item api-roll">
-                    <button class="dice-pool api-button" type="roll" name="roll_the_dice" value="!forl [[(@{skill})d6]] [[(@{attribute})d6]] [[(@{gear})d6]] [[(@{artifact_die_eight})d8+(@{artifact_die_ocho})d8+(@{artifact_die_ten})d10+(@{artifact_die_twelve})d12]] --Character|@{character_name} --Roll|@{current_preset} @{include_with_roll}" data-i18n-title="roll-dice" title="Roll the Dice!"><span class="small-caps" data-i18n="roll"> Roll </span></button>
+                    <button class="dice-pool api-button" type="roll" name="roll_the_dice_api" value="!forl [[(@{skill})d6]] [[(@{attribute})d6]] [[(@{gear})d6]] [[(@{artifact_die_eight})d8+(@{artifact_die_ocho})d8+(@{artifact_die_ten})d10+(@{artifact_die_twelve})d12]] --Character|@{character_name} --Roll|@{current_preset} @{include_with_roll}" data-i18n-title="roll-dice" title="Roll the Dice!"><span class="small-caps" data-i18n="roll"> Roll </span></button>
                 </div>
                 <div class="grid-item">
                     <button class="dice-pool" type="roll" name="roll_d66" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=D66 Roll}} {{subtitle}} {{free-text}}  {{skill-die-one=[[ 1 ]] }} {{skill-roll-one=[[ 1d6 ]] }} {{skill-die-two=[[ 1 ]] }} {{skill-roll-two=[[ 1d6 ]] }} {{footer}}" data-i18n-title="roll-dice-66" title="Roll d66!"><span class="small-caps"> D</span>66 </button>
@@ -1455,13 +1455,13 @@
 <!--- dice pool column labels in footer-->            
             {{#attribute-die-one}}
             <div class="template-grid-item template-span-left">
-                <span class="template-smaller" data-i18n="attribute-dice">Attribute Dice</span>
+                <span class="template-smaller sheet-small-caps" data-i18n="base-dice">Base Dice</span>
             </div>
             <div class="template-grid-item template-span-center">
-                <span class="template-smaller" data-i18n="skill-dice">Skill Dice</span>
+                <span class="template-smaller sheet-small-caps" data-i18n="skill-dice">Skill Dice</span>
             </div>
             <div class="template-grid-item template-span-right">
-                <span class="template-smaller" data-i18n="gear-dice">Gear Dice</span>
+                <span class="template-smaller sheet-small-caps" data-i18n="gear-dice">Gear Dice</span>
             </div>
             {{/attribute-die-one}}
 
