--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -1,4 +1,4 @@
-<!--7/9/19'-->
+<!--8/3/19'-->
 <input type="hidden" name="attr_version" value="1.5">
 
 <!--tabs-->
@@ -462,7 +462,7 @@
                     <button class="dice-pool" type="roll" name="roll_a_push" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{pushes-the-roll}}} {{subtitle=@{current_preset}}} {{free-text}} {{footer}} {{attribute-die-one=[[ @{attribute_die_one}]] }} {{attribute-roll-one=[[1d6]] }} {{attribute-die-two=[[ @{attribute_die_two}]] }} {{attribute-roll-two=[[1d6]] }} {{attribute-die-three=[[ @{attribute_die_three}]] }} {{attribute-roll-three=[[1d6]] }} {{attribute-die-four=[[ @{attribute_die_four}]] }} {{attribute-roll-four=[[1d6]] }} {{attribute-die-five=[[ @{attribute_die_five}]] }} {{attribute-roll-five=[[1d6]] }} {{attribute-die-six=[[ @{attribute_die_six}]] }} {{attribute-roll-six=[[1d6]] }} {{skill-die-one=[[ @{skill_die_one}]] }} {{skill-roll-one=[[1d6]] }} {{skill-die-two=[[ @{skill_die_two}]] }} {{skill-roll-two=[[1d6]] }} {{skill-die-three=[[ @{skill_die_three}]] }} {{skill-roll-three=[[1d6]] }} {{skill-die-four=[[ @{skill_die_four}]] }} {{skill-roll-four=[[1d6]] }} {{skill-die-five=[[ @{skill_die_five}]] }} {{skill-roll-five=[[1d6]] }} {{skill-die-six=[[ @{skill_die_six}]] }} {{skill-roll-six=[[1d6]] }} {{skill-die-seven=[[ @{skill_die_seven}]] }} {{skill-roll-seven=[[1d6]] }} {{negative-die-one=[[ @{negative_die_one}]] }} {{negative-roll-one=[[1d6]] }} {{negative-die-two=[[ @{negative_die_two}]] }} {{negative-roll-two=[[1d6]] }} {{negative-die-three=[[ @{negative_die_three}]] }} {{negative-roll-three=[[1d6]] }} {{gear-die-one=[[ @{gear_die_one}]] }} {{gear-roll-one=[[1d6]] }} {{gear-die-two=[[ @{gear_die_two}]] }} {{gear-roll-two=[[1d6]] }} {{gear-die-three=[[ @{gear_die_three}]] }} {{gear-roll-three=[[1d6]] }} {{gear-die-four=[[ @{gear_die_four}]] }} {{gear-roll-four=[[1d6]] }} {{gear-die-five=[[ @{gear_die_five}]] }} {{gear-roll-five=[[1d6]] }} {{gear-die-six=[[ @{gear_die_six}]] }} {{gear-roll-six=[[1d6]] }} {{gear-die-seven=[[ @{gear_die_seven}]] }} {{gear-roll-seven=[[1d6]] }} {{gear-die-eight=[[ @{gear_die_eight}]] }} {{gear-roll-eight=[[1d6]] }} {{gear-die-nine=[[ @{gear_die_nine}]] }} {{gear-roll-nine=[[1d6]] }} {{gear-die-ten=[[ @{gear_die_ten}]] }} {{gear-roll-ten=[[1d6]] }} {{gear-die-eleven=[[ @{gear_die_eleven}]] }} {{gear-roll-eleven=[[1d6]] }} {{gear-die-twelve=[[ @{gear_die_twelve}]] }} {{gear-roll-twelve=[[1d6]] }} {{artifact-die-eight=[[ @{artifact_die_eight}]] }} {{artifact-roll-eight=[[1d8]] }} {{artifact-die-ocho=[[ @{artifact_die_ocho}]] }} {{artifact-roll-ocho=[[1d8]] }} {{artifact-die-ten=[[ @{artifact_die_ten}]] }} {{artifact-roll-ten=[[1d10]] }} {{artifact-die-twelve=[[ @{artifact_die_twelve}]] }} {{artifact-roll-twelve=[[1d12]] }} {{push-query=?{Did You Adjust the Dice Pool?|Yes ~ Of Course I Did.,The Pool of Dice was Adjusted.|No ~ I didn't ~ I need to Cancel this Roll.,The Pool of Dice was Not Adjusted.} }} @{include_with_roll}" data-i18n-title="push-dice" title="Push the Dice!"><span class="small-caps" data-i18n="push"> Push </span></button>
                 </div>
                 <div class="grid-item api-roll">
-                    <button class="dice-pool api-button" type="roll" name="roll_the_dice_api" value="!forl [[(@{skill})d6]] [[(@{attribute})d6]] [[(@{gear})d6]] [[(@{artifact_die_eight})d8+(@{artifact_die_ocho})d8+(@{artifact_die_ten})d10+(@{artifact_die_twelve})d12]] --Character|@{character_name} --Roll|@{current_preset} @{include_with_roll}" data-i18n-title="roll-dice" title="Roll the Dice!"><span class="small-caps" data-i18n="roll"> Roll </span></button>
+                    <button class="dice-pool api-button" type="roll" name="roll_the_dice_api" value="!forl [[(@{skill})d6]] [[(@{attribute})d6]] [[(@{gear})d6]] [[(@{artifact_die_eight})d8+(@{artifact_die_ocho})d8+(@{artifact_die_ten})d10+(@{artifact_die_twelve})d12]] --Character|@{character_name} --Roll|@{current_preset}" data-i18n-title="roll-dice" title="Roll the Dice!"><span class="small-caps" data-i18n="roll"> Roll </span></button>
                 </div>
                 <div class="grid-item">
                     <button class="dice-pool" type="roll" name="roll_d66" value="&{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=D66 Roll}} {{subtitle}} {{free-text}}  {{skill-die-one=[[ 1 ]] }} {{skill-roll-one=[[ 1d6 ]] }} {{skill-die-two=[[ 1 ]] }} {{skill-roll-two=[[ 1d6 ]] }} {{footer}}" data-i18n-title="roll-dice-66" title="Roll d66!"><span class="small-caps"> D</span>66 </button>
@@ -724,7 +724,7 @@
         <div class="box toggle-dice-only character-mount">
             <div class="mount-grid">                
                 <div class="mount-box1 header"><h1 data-i18n="moun-u">MOUNT</h1></div>
-                <input type="checkbox" name="attr_expand" class="expand" data-i18n-title="show-hide" title="show/hide" style="margin-top: 2.75em;" /><span></span>
+                <input type="checkbox" name="attr_expand" class="expand" data-i18n-title="show-hide" title="show/hide" style="margin-top: 3.35em;" /><span></span>
                 <input class="mount-box2 input" type="text" name="attr_mount_name" value="" title="@{mount_name}" placeholder="name" />
                 <div class="mount-box3"><span class="label" data-i18n="strength-abbr-u">STR</span></div>
                 <input class="mount-box4 input-number" type="number" name="attr_mount_strength" value="1" title="@{mount_strength}" />
@@ -1758,7 +1758,7 @@
                 skill: parseInt(values[getSkill(which)], 10) || 0,
     // uses the translation key
                 gear: 0,
-                current_preset: whichKey,                
+                current_preset: whichKey,
                 include_with_roll: ""
             });
         });
