--- a/Terror Infinity - (FX)/Terror Infinity.html
+++ b/Terror Infinity - (FX)/Terror Infinity.html
@@ -1463,7 +1463,7 @@
                         </div>
                         <div class="greybg boxed">
                             <input type="number" name="attr_B1" class="nospin boxed" disabled="true"
-                                value="@{B2}+@{B3}+@{B4}+@{B1_temp}" />
+                                value="@{B2}+@{B3}+@{B4}+@{B1_temp}+@{B1_1}+@{B1_1}+@{B1_1}" />
                         </div>
                         <div class="boxed">
                             <input type="number" name="attr_B1_temp" class="nospin boxed" value="0" /> </div>
@@ -1475,7 +1475,7 @@
                         </div>
                         <div class="greybg boxed">
                             <input type="number" name="attr_C1" class="nospin boxed" disabled="true"
-                                value="@{C2}+@{C3}+@{C4}+@{C1_temp}" /></div>
+                                value="@{C2}+@{C3}+@{C4}+@{C1_temp}+@{C1_1}+@{C1_2}+@{C1_3}" /></div>
                         <div class="boxed">
                             <input type="number" name="attr_C1_temp" class="nospin boxed" value="0" />
                         </div>
@@ -1495,22 +1495,23 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_A2" class="nospin boxed" disabled
-                                    value="[[@{dexterity_sum}]]+[[@{composure_sum}]]+[[@{composure_bonus_sum}]]" />
+                                    value="[[@{dexterity_sum}]]+[[@{composure_sum}]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
-                                <input type="number" name="attr_A3" value="0" class="nospin boxed" />
+                                <input type="number" name="attr_A3" value="0" class="nospin boxed" title="A3"/>
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
                                 <input type="number" name="attr_A4" value="0" class="nospin boxed" />
                             </div>
                             <span class="spacer"></span>
-                            <span class="spacer">附加成功=</span>
+                            <span class="spacer">傳奇屬性=</span>
                             <span class="spacer"></span>
                             <span class="spacer"></span>
-                            <div class="boxed">
-                                <input type="number" name="attr_A1_1" class="nospin boxed" value="0" /> </div>
+                            <div class="greybg boxed">
+                                <input type="number" name="attr_A1_1" class="nospin boxed" title="A1_1" disabled
+                                    value="(@{composure_bonus_sum})*4" /> </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
                                 <input type="number" name="attr_A1_2" class="nospin boxed" value="0" />
@@ -1534,7 +1535,7 @@
                             <span class="spacer"></span>
                             <span class="spacer"></span>
                             <div class="boxed greybg">
-                                <input type="number" name="attr_B2" class="nospin boxed " disabled value="(@{C1})*10" />
+                                <input type="number" name="attr_B2" class="nospin boxed " disabled value="(@{C1})*2" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -1547,10 +1548,10 @@
 
                             </div>
                             <span class="spacer"></span>
-                            <span class="spacer">附加成功=</span>
+                            <span class="spacer">傳奇屬性=</span>
                             <span class="spacer"></span>
                             <span class="spacer"></span>
-                            <div class="boxed">
+                            <div class="boxed ">
                                 <input type="number" name="attr_B1_1" class="nospin boxed" value="0" /> </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -1576,7 +1577,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_C2" class="nospin boxed " disabled
-                                    value="(@{Wits_sum})*10+(@{Wits_bonus_sum})*20" />
+                                    value="(@{Wits_sum})*20" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -1589,11 +1590,12 @@
 
                             </div>
                             <span class="spacer"></span>
-                            <span class="spacer">附加成功=</span>
+                            <span class="spacer">傳奇屬性=</span>
                             <span class="spacer"></span>
                             <span class="spacer"></span>
-                            <div class="boxed">
-                                <input type="number" name="attr_C1_1" class="nospin boxed" value="0" /> </div>
+                            <div class="boxed greybg">
+                                <input type="number" disabled name="attr_C1_1" class="nospin boxed"
+                                    value="(@{Wits_bonus_sum})*20" /> </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
                                 <input type="number" name="attr_C1_2" class="nospin boxed" value="0" />
@@ -1643,7 +1645,7 @@
                         </div>
                         <div class="greybg boxed">
                             <input type="number" name="attr_D1" class="nospin boxed" disabled="true"
-                                value="@{D2}+@{D3}+@{D4}+@{D1_temp}" />
+                                value="@{D2}+@{D3}+@{D4}+@{D1_temp}+@{D1_1}+@{D1_2}+@{D1_3}" />
                         </div>
                         <div class="boxed">
                             <input type="number" name="attr_D1_temp" class="nospin boxed" value="0"
@@ -1657,7 +1659,7 @@
                         </div>
                         <div class="greybg boxed">
                             <input type="number" name="attr_E1" class="nospin boxed" disabled="true"
-                                value="@{E2}+@{E3}+@{E4}+@{E1_temp}" />
+                                value="@{E2}+@{E3}+@{E4}+@{E1_temp}+@{E1_1}+@{E1_2}+@{E1_3}" />
                         </div>
                         <div class="boxed">
                             <input type="number" name="attr_E1_temp" class="nospin boxed" value="0" /> </div>
@@ -1669,7 +1671,7 @@
                         </div>
                         <div class="greybg boxed">
                             <input type="number" name="attr_F1" class="nospin boxed" disabled="true"
-                                value="@{F2}+@{F3}+@{F4}+@{F1_temp}" />
+                                value="@{F2}+@{F3}+@{F4}+@{F1_temp}+@{F1_1}+@{F1_2}+@{F1_3}" />
                         </div>
                         <div class="boxed">
                             <input type="number" name="attr_F1_temp" class="nospin boxed" value="0" />
@@ -1690,7 +1692,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_D2" class="nospin boxed " disabled
-                                    value="[[@{strength_sum}]]+[[@{dexterity_sum}]]+[[@{I1}]]+([[@{dexterity_bonus_sum}]])*3" />
+                                    value="[[@{strength_sum}]]+[[@{dexterity_sum}]]+[[@{I1}]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -1703,11 +1705,12 @@
 
                             </div>
                             <span class="spacer"></span>
-                            <span class="spacer">附加成功=</span>
+                            <span class="spacer">傳奇屬性=</span>
                             <span class="spacer"></span>
                             <span class="spacer"></span>
-                            <div class="boxed">
-                                <input type="number" name="attr_D1_1" class="nospin boxed" value="0" /> </div>
+                            <div class="boxed greybg">
+                                <input type="number" disabled name="attr_D1_1" class="nospin boxed"
+                                    value="([[@{dexterity_bonus_sum}]])*5" /> </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
                                 <input type="number" name="attr_D1_2" class="nospin boxed" value="0" />
@@ -1838,7 +1841,7 @@
                         </div>
                         <div class="greybg boxed">
                             <input type="number" name="attr_G1" class="nospin boxed" disabled="true" disabled
-                                value="@{G2}+@{G3}+@{G4}+@{G1_temp}" />
+                                value="@{G2}+@{G3}+@{G4}+@{G1_temp}+@{G1_1}+@{G1_2}+@{G1_3}" />
                         </div>
                         <div class="boxed">
                             <input type="number" name="attr_G1_temp" class="nospin boxed" value="0"
@@ -1852,7 +1855,7 @@
                         </div>
                         <div class="greybg boxed">
                             <input type="number" name="attr_H1" class="nospin boxed" disabled="true"
-                                value="@{H2}+@{H3}+@{H4}+@{H1_temp}" />
+                                value="@{H2}+@{H3}+@{H4}+@{H1_temp}+@{H1_1}+@{H1_2}+@{H1_3}" />
                         </div>
                         <div class="boxed">
                             <input type="number" name="attr_H1_temp" class="nospin boxed" value="0" /> </div>
@@ -1864,7 +1867,7 @@
                         </div>
                         <div class="greybg boxed">
                             <input type="number" name="attr_I1" class="nospin boxed" disabled="true"
-                                value="@{I2}+@{I3}+@{I4}+@{I1_temp}" />
+                                value="@{I2}+@{I3}+@{I4}+@{I1_temp}+@{I1_1}+@{I1_2}+@{I1_3}" />
                         </div>
                         <div class="boxed">
                             <input type="number" name="attr_I1_temp" class="nospin boxed" value="0" />
@@ -1885,7 +1888,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_G2" class="nospin boxed " disabled
-                                    value="[[@{stamina_sum}]]+[[@{I1}]]+[[((@{stamina_bonus_sum})+1)*(@{stamina_bonus_sum})/2]]" />
+                                    value="[[@{stamina_sum}]]+[[@{I1}]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -1901,8 +1904,9 @@
                             <span class="spacer">附加成功=</span>
                             <span class="spacer"></span>
                             <span class="spacer"></span>
-                            <div class="boxed">
-                                <input type="number" name="attr_G1_1" class="nospin boxed" value="0" /> </div>
+                            <div class="boxed greybg">
+                                <input type="number" name="attr_G1_1" class="nospin boxed" disabled
+                                    value="(@{stamina_bonus_sum})*2" /> </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
                                 <input type="number" name="attr_G1_2" class="nospin boxed" value="0" />
@@ -1927,7 +1931,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_H2" class="nospin boxed" disabled
-                                    value="[[@{composure_sum}]]+[[@{resolve_sum}]]+[[@{resolve_bonus_sum}]]+[[@{composure_bonus_sum}]]" />
+                                    value="[[@{composure_sum}]]+[[@{resolve_sum}]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -1943,8 +1947,9 @@
                             <span class="spacer">附加成功=</span>
                             <span class="spacer"></span>
                             <span class="spacer"></span>
-                            <div class="boxed ">
-                                <input type="number" name="attr_H1_1" class="nospin boxed" value="0" /> </div>
+                            <div class="boxed greybg">
+                                <input type="number" disabled name="attr_H1_1" class="nospin boxed"
+                                    value="[[@{resolve_bonus_sum}]]+[[@{composure_bonus_sum}]]" /> </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
                                 <input type="number" name="attr_H1_2" class="nospin boxed" value="0" />
@@ -2036,7 +2041,7 @@
                         </div>
                         <div class="greybg boxed">
                             <input type="number" name="attr_J1" class="nospin boxed" disabled="true"
-                                value="(@{J2})+@{J3}+@{J4}+@{J1_temp}" />
+                                value="(@{J2})+@{J3}+@{J4}+@{J1_temp})" />
                         </div>
                         <div class="boxed">
                             <input type="number" name="attr_J1_temp" class="nospin boxed" value="0"
@@ -2101,7 +2106,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_J1_1" class="nospin boxed" disabled
-                                    value="(@{dexterity_bonus_sum}+@{Wits_bonus_sum})" />
+                                    value="[[{[[(@{dexterity_bonus_sum})]],[[(@{Wits_bonus_sum})]]}kh1]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -2127,7 +2132,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_K2" class="nospin boxed " disabled
-                                    value="[[@{H1}]]+[[@{resolve_bonus_sum}]]" />
+                                    value="[[@{H1}]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -2189,7 +2194,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_L1_1" disabled class="nospin boxed"
-                                    value="[[@{resolve_bonus_sum}+@{composure_bonus_sum}]]" />
+                                    value="[[@{dexterity_bonus_sum}+@{skills_19_bonus_sum}]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -2332,7 +2337,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_N2" class="nospin boxed" disabled
-                                    value="[[@{stamina_sum}]]+[[@{skills_07_sum}]]" />
+                                    value="[[@{stamina_sum}]]+[[@{skills_04_sum}]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -2350,7 +2355,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_N1_1" disabled class="nospin boxed"
-                                    value="[[@{stamina_bonus_sum}+@{skills_07_bonus_sum}]]" />
+                                    value="[[@{stamina_bonus_sum}+@{skills_04_bonus_sum}]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -2376,7 +2381,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_O2" class="nospin boxed" disabled
-                                    value="[[@{Wits_sum}]]+[[@{skills_14_sum}]]" />
+                                    value="[[@{Wits_sum}]]+[[@{skills_18_sum}]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
@@ -2394,7 +2399,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_O1_1" class="nospin boxed "
-                                    value="[[@{Wits_bonus_sum}+@{skills_14_bonus_sum}]]" disabled /> </div>
+                                    value="[[@{Wits_bonus_sum}+@{skills_18_bonus_sum}]]" disabled /> </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
                                 <input type="number" name="attr_O1_2" class="nospin boxed" value="0" />
