--- a/Terror Infinity - (FX)/Terror Infinity.html
+++ b/Terror Infinity - (FX)/Terror Infinity.html
@@ -2041,7 +2041,7 @@
                         </div>
                         <div class="greybg boxed">
                             <input type="number" name="attr_J1" class="nospin boxed" disabled="true"
-                                value="(@{J2})+@{J3}+@{J4}+@{J1_temp})" />
+                                value="@{J2}+@{J3}+@{J4}+@{J1_temp}" />
                         </div>
                         <div class="boxed">
                             <input type="number" name="attr_J1_temp" class="nospin boxed" value="0"
@@ -2106,7 +2106,7 @@
                             <span class="spacer"></span>
                             <div class="boxed greybg">
                                 <input type="number" name="attr_J1_1" class="nospin boxed" disabled
-                                    value="[[{[[(@{dexterity_bonus_sum})]],[[(@{Wits_bonus_sum})]]}kh1]]" />
+                                    value="[[{(@{dexterity_bonus_sum}),(@{Wits_bonus_sum})}kh1]]" />
                             </div>
                             <span class="spacer">+</span>
                             <div class="boxed">
