--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -21,8 +21,10 @@
 	        <div class="content">
 	            <h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 	            <ul>
+					<li>Rolltemplate: If Target is too low, show warning message.</li>
 					<li>General Tab: Fix bug for totalling amounts in summary point table. Reported by Raymond G and Elaxter.</li>
-					<li>Rolltemplate: If Target is too low, show error message.</li>
+					<li>General Tab: Fixed movement feats box alignment when Encrumbance table is expanded.</li>
+					<li></li>
             	</ul>
 	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -2961,13 +2963,17 @@
 					</div> <!-- .sheet-row -->
 					<div class="sheet-row sheet-row-details2">
 						<div class="sheet-cell sheet-col0 sheet-label">
-							Weapon Notes
+						    Weapon Notes
 						</div>
 						<div class="sheet-cell sheet-col1">
 							<input type="text" name="attr_notes" />
 						</div>
 						<div class="sheet-cell sheet-col2 sheet-label">
-							Damage Notes
+							<div class="sheet-popup">Damage Notes</div>
+							<span class="sheet-tooltip">
+							    <strong>Hint:</strong> Enter inline rolls for additional results.<br />
+							    Example: [[1d6]] fire damage.
+						    </span>
 						</div>
 						<div class="sheet-cell sheet-col3">
 							<input type="text" name="attr_damage_notes" />
@@ -3145,7 +3151,11 @@
 							<input type="text" name="attr_notes" />
 						</div>
 						<div class="sheet-cell sheet-col2 sheet-label">
-							Damage Notes
+							<div class="sheet-popup">Damage Notes</div>
+							<span class="sheet-tooltip">
+							    <strong>Hint:</strong> Enter inline rolls for additional results.<br />
+							    Example: [[1d6]] fire damage.
+						    </span>
 						</div>
 						<div class="sheet-cell sheet-col3">
 							<input type="text" name="attr_damage_notes" />
@@ -3362,7 +3372,11 @@
         						<input type="text" name="attr_thrown_object_notes" />
         					</div>
         					<div class="sheet-cell sheet-col2 sheet-label">
-        						Damage Notes
+        						<div class="sheet-popup">Damage Notes</div>
+    							<span class="sheet-tooltip">
+    							    <strong>Hint:</strong> Enter inline rolls for additional results.<br />
+    							    Example: [[1d6]] fire damage.
+    						    </span>
         					</div>
         					<div class="sheet-cell sheet-col3">
         						<input type="text" name="attr_thrown_object_damage_notes" />
@@ -3917,8 +3931,9 @@
 	<p>Pull Request: 8/6/2019</p>
 	
 	<ul>
+	    <li>Rolltemplate: If Target is too low, show warning message. If Defense roll, lowest Target is 1. All other rolls, lowest Target is 3.</li>
 	    <li>General Tab: Fix bug for totalling amounts in summary point table. Reported by Raymond G and Elaxter.</li>
-	    <li>Rolltemplate: If Target is too low, show error message. If Defense roll, lowest Target is 1. All other rolls, lowest Target is 3.</li>
+		<li>General Tab: Fixed movement feats box alignment when Encrumbance table is expanded.</li>
 	</ul>
 	
 	<h4>Version: 1.6.2</h4>
