add howTo modal for Traits particuliers

--- a/Naheulbeuk/Naheulbeuk.html
+++ b/Naheulbeuk/Naheulbeuk.html
@@ -572,8 +572,27 @@
 				</fieldset>
 			</div>
 			<br />
-			<div class="sheet-ape">
-				<h2>Traits particuliers (Débilibeuks / Mankdebols / Mutations / Maladies / Malédictions...)</h2>
+			<div class="sheet-traits">
+				<h2>Traits particuliers (Débilibeuks / Mankdebols / Mutations / Maladies / Malédictions...) <input type="checkbox" name="attr_modal_traits" class="sheet-modal" value="1" title="Comment ca marche ?"><span class="sheet-cog" title="Comment ca marche ?">?</span></h2>
+				<input type="checkbox" class="sheet-hidden sheet-modal" name="attr_modal_traits" value="1">
+				<div class="sheet-modal-wrapper">
+					<div class="sheet-modal">
+						<div class="sheet-modal_header">
+							<h2>Traits particuliers <span class="sheet-close">*</span><input type="checkbox" class="sheet-modal" name="attr_modal_traits" value="1"></h2>
+						</div>
+						<div class="sheet-modal_body">
+							Dans le champ Effets, listez les bonus (+) et malus (-) séparés par des virgules, en minuscules ou majuscules, avec ou sans espaces.<br /><br />
+							Activez le trait en fonction des circonstances (blessure, bonus temporaire, arme dégainée...)<br /><br />
+							<b>Statistiques disponibles :</b><br />
+							<ul>
+								<li>cou, int, cha, ad, fo</li>
+								<li>at, prd, jet, esq, fouille</li>
+								<li>inge, mphy, mpsy, rm, pr</li>
+							</ul>
+							Ex: COU+2, int-3,cha +4, pr-2
+						</div>
+					</div>
+				</div>
 				<div class="sheet-tableth sheet-row">
 					<div class="sheet-col-2">Provenance</div>
 					<div class="sheet-col-2">Nom</div>
