[Fix] allows space in regExp Trait Particulier

--- a/Naheulbeuk/Naheulbeuk.html
+++ b/Naheulbeuk/Naheulbeuk.html
@@ -2897,8 +2897,8 @@
 							// cut all the effects by group
 							_mods = v[ _effets ].split(',');
 							_.each(_mods, function(_mod) {
-								var _aMod = _mod.match(/([a-zA-Z ]*)([\+\-])([0-9])/);	
-								
+								var _aMod = _mod.match(/([a-zA-Z]*) *([\+\-]) *([0-9])/);
+																
 								if( !!_aMod ) {						
 									// get value of effect
 									var _tempValue = safeInt( _aMod[3] );
